Modify format config file

--- a/SCRIPTS/bc_system.cfg
+++ b/SCRIPTS/bc_system.cfg
@@ -1,23 +1,22 @@
 #CONFIG FILE CONTENT
 
 
+[INTERNAL]
+DEVICE_NAME=enp2s0
 
-INTERNAL_INTERFACE_NAME=enp2s0
+IPADDR_MAJOR=192.168.2.222
+IPADDR_MINOR=192.168.2.221
+IPADDR_RESERVED=192.168.223
 
-INTERNAL_IPADDR_MAJOR=192.168.2.222
-INTERNAL_IPADDR_MINOR=192.168.2.221
-INTERNAL_IPADDR_RESERVED=192.168.223
-    INTERNAL_NETMASK=255.255.255.0
-INTERNAL_PREFIX=24
+NETMASK=255.255.255.0
+PREFIX=24
 
-EXTERNAL_INTERFACE_NAME=enp7s4 		   	
+[EXTERNAL]
+DEVICE_NAME=enp7s4
+ IPADDR=10.54.94.98
+NETMASK=255.255.255.0
+PREFIX=24
 
-
-EXTERNAL_IPADDR=10.54.94.98
-
-    EXTERNAL_NETMASK=255.255.255.0
-	     EXTERNAL_PREFIX=24
-
- EXTERNAL_IPADDR1=10.54.94.99
-EXTERNAL_NETMASK1=255.255.255.0
-EXTERNAL_PREFIX1=24
+IPADDR1=10.54.94.99
+NETMASK1=255.255.255.0
+PREFIX1=24
