--- a/SCRIPTS/bc_system.cfg
+++ b/SCRIPTS/bc_system.cfg
@@ -1,22 +1,52 @@
-#CONFIG FILE CONTENT
+ #
+ # This is config file for blucherry system.
+ #
+ # Blucherry system includes two equivalent servers. Each server is connected
+ # to the bluecherry (internal) network via device DEVICE_NAME defined in the
+ # config file section marked as [INTERNAL].
+ #
+ # At any given time, only one server should be connected to the external network
+ # via device DEVICE_NAME defined in the config file section marked as [EXTERNAL].
+ # This connection has one or multiple ip-addresses (IPADDR=, IPADDR1=, ... , IPADDRN=).
+ # For example, using multiple ip-addresses may be required to logically group devices
+ # on the client side, or other porposes.
+ #
+ # The server that has an active external network connection is the MAJOR;
+ # the other server is MINOR. These servers must have the ip-adresses IPADDR_MAJOR
+ # and IPADDR_MINOR defined in the config file section marked as [INTERNAL].
+ # Also in the same section it's necessary to define the ip-address IPADDR_RESERVED
+ # (required for reconfiguration the internal network when changing server roles).
+ #
+ # Optional config file section. This section is marked as [OPTIONAL]. It is defined,
+ # then you need to include to it and define the following parameters: DEVICE_NAME,
+ # IPADDR (if necessary IPADDR1, IPADDR2 etc). Optional section can be defined
+ # multiple times in the config file.
+ #
+ # !!! NOTE !!!
+ # 1. All ip-addresses specified in the config file must be defined in
+ # 'ip-address/prefix' format (for example IPADDR=192.168.2.222/24)!
+ #
+ # 2. The IPADDR_MAJOR, IPADDR_MINOR and IPADDR_RESERVED values must be
+ # the same on both servers, respectively: the IPADDR_MAJOR value on the one server
+ # is qual to the IPADDR_MAJOR on the other server, and so on!
+ #
+ # 3. All DEVICE_NAME values must be unique for each section within the config file!
+ 
+ [INTERNAL]
+ DEVICE_NAME=enp2s0
+ IPADDR_MAJOR=192.168.2.222/24
+ IPADDR_MINOR=192.168.2.221/24
+ IPADDR_RESERVED=192.168.223/24
+ 
+ [EXTERNAL]
+ DEVICE_NAME=enp7s4
+ IPADDR=10.54.94.98/24 IPADDR1=10.54.94.99/24
+ 
+ # If necessary, you can define in this section IPADDR1, IPADDR2 etc.
+ 
 
+[OPTIONAL]
+ewq
+[OPTIONAL]
 
-[INTERNAL]
-DEVICE_NAME=enp2s0
-
-IPADDR_MAJOR=192.168.2.222
-IPADDR_MINOR=192.168.2.221
-IPADDR_RESERVED=192.168.223
-
-NETMASK=255.255.255.0
-PREFIX=24
-
-[EXTERNAL]
-DEVICE_NAME=enp7s4
- IPADDR=10.54.94.98
-NETMASK=255.255.255.0
-PREFIX=24
-
-IPADDR1=10.54.94.99
-NETMASK1=255.255.255.0
-PREFIX1=24
+DEVICE_NAME=enp7s
