Edited the DEVICE_NAME parameter

--- a/SCRIPTS/bc_system.cfg
+++ b/SCRIPTS/bc_system.cfg
@@ -33,14 +33,14 @@
  # 3. All DEVICE_NAME values must be unique for each section within the config file!
  
  [INTERNAL]
- DEVICE_NAME=enp2s0
+ DEVICE_NAME=enp3s0
  IPADDR_MAJOR=192.168.2.222/24
  IPADDR_MINOR=192.168.2.221/24
  IPADDR_RESERVED=192.168.223/24
  
  [EXTERNAL]
  DEVICE_NAME=enp7s4
- IPADDR=10.54.94.98/24 IPADDR1=10.54.94.99/24
+# IPADDR=10.54.94.98/24 IPADDR1=10.54.94.99/24
  
  # If necessary, you can define in this section IPADDR1, IPADDR2 etc.
  
@@ -49,4 +49,5 @@
 ewq
 [OPTIONAL]
 
-DEVICE_NAME=enp7s
+DEVICE_NAME=enp3s0
+#IPADDR=192.168.3.111/24
