--- a/SCRIPTS/bc_system.cfg
+++ b/SCRIPTS/bc_system.cfg
@@ -39,15 +39,13 @@
  IPADDR_RESERVED=192.168.223/24
  
  [EXTERNAL]
- DEVICE_NAME=enp7s4
-# IPADDR=10.54.94.98/24 IPADDR1=10.54.94.99/24
+ DEVICE_NAME=lo
+ IPADDR=10.54.94.98/24 IPADDR1=10.54.94.99/24
  
  # If necessary, you can define in this section IPADDR1, IPADDR2 etc.
  
 
 [OPTIONAL]
-ewq
-[OPTIONAL]
 
 DEVICE_NAME=enp3s0
-#IPADDR=192.168.3.111/24
+IPADDR=192.168.3.111/24
